name:                JuicyPixels-blp
version:             0.1.0.0
synopsis:            BLP format decoder/encoder over JuicyPixels library
description:         Please see README.md
homepage:            http://github.com/NCrashed/JuicyPixels-blp#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2015 Anton Gushcha
category:            Codec, Graphics, Image
build-type:          Simple
cabal-version:       >=1.10

Source-Repository head
    Type:      git
    Location:  git@github.com:NCrashed/JuicyPixels-blp.git

library
  hs-source-dirs:      src
  exposed-modules:     Codec.Picture.Blp
                       Codec.Picture.Blp.Internal.Convert
                       Codec.Picture.Blp.Internal.Data
                       Codec.Picture.Blp.Internal.Parser

  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10.6
                     , vector >= 0.10.12
                     , JuicyPixels >= 3.2.6.4
                     , attoparsec >= 0.12.1.6
                     , hashable >= 1.2.3

  default-extensions:  RecordWildCards
                       DeriveGeneric
                       OverloadedStrings

executable blp2any
  hs-source-dirs:      blp2any
  main-is:             Main.hs
  other-modules:       Convert
                       File
                       Statistics

  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , JuicyPixels-blp
                     , JuicyPixels >= 3.2.6.4
                     , bytestring >= 0.10.6
                     , directory >= 1.2.2
                     , filepath >= 1.4.0.0
                     , unordered-containers >= 0.2.5
                     , optparse-simple >= 0.0.3 

  default-extensions:  RecordWildCards
  ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N