name:                JuicyPixels-blp
version:             0.1.0.0
synopsis:            BLP format decoder/encoder over JuicyPixels library
description:         Please see README.md
homepage:            http://github.com/NCrashed/JuicyPixels-blp#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2015-2018 Anton Gushcha
category:            Codec, Graphics, Image
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:      git
  location:  git@github.com:NCrashed/JuicyPixels-blp.git

library
  hs-source-dirs:      src
  exposed-modules:
    Codec.Picture.Blp
    Codec.Picture.Blp.Internal.Convert
    Codec.Picture.Blp.Internal.Data
    Codec.Picture.Blp.Internal.Parser

  default-language:    Haskell2010
  build-depends:
      base            >= 4.7    && < 5
    , attoparsec      >= 0.12   && < 0.14
    , bytestring      >= 0.10   && < 0.11
    , hashable        >= 1.2    && < 1.3
    , JuicyPixels     >= 3.2    && < 3.3
    , vector          >= 0.10   && < 0.13

  default-extensions:
    DeriveGeneric
    OverloadedStrings
    RecordWildCards

executable blp2any
  hs-source-dirs:      blp2any
  main-is:             Main.hs
  other-modules:
    Convert
    File
    Statistics
  ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:
      base                  >= 4.7    && < 5
    , JuicyPixels-blp
    , JuicyPixels
    , bytestring
    , directory             >= 1.2    && < 1.4
    , filepath              >= 1.4    && < 1.5
    , unordered-containers  >= 0.2    && < 0.3
    , optparse-simple       >= 0.0.3  && < 0.2

  default-extensions:
    RecordWildCards
